feat(web): add device daily route views
